--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/wwwroot/css/site.css
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/wwwroot/css/site.css
@@ -1,1 +1,29 @@
-﻿
+﻿*{background-color: gray
+}
+
+.Baumarkt {
+    font-size: 30px;
+    text-align: center;
+    margin-top: 50px;
+}
+header{
+    height: 150px;
+}
+footer{
+    height: 40px;
+    padding-top:200px;
+}
+content {
+    padding-top: 20px;
+    padding-left: 10px;
+    width: 90%;
+    min-width: 640px;
+    float: right;
+    min-height: 400px;
+}
+nav{
+    float:left;
+    padding-top: 10px;
+    width:10%;
+    min-width:40px;
+}
