Login, Suchfeld, dropdown

--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/_Layout.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Webprojekt_1_Bauhandel</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div id="container">
@@ -15,15 +16,12 @@
             </div>
         </header>
         <main>
-            <nav>
-                <partial name="Navigation" />
-            </nav>
+            <partial name="Navigation" />
             <content>
                 @RenderBody()
             </content>
         </main>
         <footer>
-
             <partial name="Fußzeile" />
         </footer>
     </div>
