--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/Navigation.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/Navigation.cshtml
@@ -1,23 +1,23 @@
-﻿<ul>
-    <li class="level1">
-        <a asp-controller="home" asp-action="index">Startseite</a>
-    </li>
-    <li class="level1">
-        <a asp-controller="home" asp-action="aboutUs">Über uns</a>
-    </li>
-    <li class="level1">
-        <a asp-controller="home" asp-action="impressum">Impressum</a>
-    </li>
-    <li class="level1">
-        <a asp-controller="shop" asp-action="index">Shop</a>
-    </li>
-    <li class="level1">
-        <a asp-controller="user" asp-action="index">Benutzer</a>
-    </li>
-    <li class="level2">
-        <a asp-controller="user" asp-action="login">Login</a>
-    </li>
-    <li class="level2">
-        <a asp-controller="user" asp-action="register">Register</a>
-    </li>
-</ul>
+﻿    <div class="navbar">
+    <li><a asp-controller="home" asp-action="index">Startseite</a></li>
+    <li><a asp-controller="home" asp-action="aboutUs">Über uns</a></li>
+    <li><a asp-controller="home" asp-action="impressum">Impressum</a></li>
+    <li><a asp-controller="shop" asp-action="index">Shop</a></li>
+    <div class="dropdown">
+        <button class="dropbtn">
+            Benutzer
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a asp-controller="user" asp-action="index">Account</a>
+            <a asp-controller="user" asp-action="login">Login</a>
+            <a asp-controller="user" asp-action="register">Register</a>
+        </div>
+    </div>
+    <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
+        <input type="text" placeholder="Suche" name="search2">
+        <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+
+</div>
+
