--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/User/Login.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/User/Login.cshtml
@@ -3,5 +3,37 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<html lang="en">
+<body>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 col-xl-9 mx-auto">
+                <div class="card card-signin flex-row my-5">
+                    <div class="card-img-left d-none d-md-flex">
+
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Login</h5>
+
+                        <form class="form-signin">
+                            <div class="form-label-group">
+                                <input type="email" placeholder="EMail" value="" autocomplete="on" required>
+                            </div>
+                            <div class="form-label-group">
+                                <input type="password" placeholder="Passwort" value="" autocomplete="off" required>
+                            </div>
+
+                            <div class="container">
+                                <button type="submit" value=""><a asp-controller="user" asp-action="index">Anmelden</a></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 
