--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/wwwroot/css/site.css
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/wwwroot/css/site.css
@@ -1,29 +1,100 @@
-﻿*{background-color: gray
+﻿body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.Baumarkt {
-    font-size: 30px;
-    text-align: center;
-    margin-top: 50px;
+.navbar {
+    
+    background-color: #333;
 }
-header{
-    height: 150px;
+
+    .navbar a {
+        float: left;
+        font-size: 16px;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+.dropdown {
+    float: left;
+    
 }
-footer{
-    height: 40px;
-    padding-top:200px;
+
+    .dropdown .dropbtn {
+        font-size: 16px;
+        border: none;
+        outline: none;
+        color: white;
+        padding: 14px 16px;
+        background-color: inherit;
+        font-family: inherit;
+        margin: 0;
+    }
+
+    .navbar a:hover, .dropdown:hover .dropbtn {
+        background-color: red;
+    }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
-content {
-    padding-top: 20px;
-    padding-left: 10px;
-    width: 90%;
-    min-width: 640px;
-    float: right;
-    min-height: 400px;
+
+    .dropdown-content a {
+        float: none;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+        .dropdown-content a:hover {
+            background-color: blue;
+        }
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
-nav{
-    float:left;
-    padding-top: 10px;
-    width:10%;
-    min-width:40px;
+
+
+
+* {
+    box-sizing: border-box;
+}
+
+form.example input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+}
+
+form.example button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+}
+
+    form.example button:hover {
+        background: #0b7dda;
+    }
+
+form.example::after {
+    content: "";
+    clear: both;
+    display: table;
 }
