--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Home/AboutUs.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Home/AboutUs.cshtml
@@ -3,5 +3,6 @@
     ViewData["Title"] = "AboutUs";
 }
 
-<h1>AboutUs</h1>
+<p>1891 hat alles mit einen Handbohrer angefangen. Heute entwickeln und produzieren wir hochmoderen Werkzeuge. <p>
+
 
