--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Home/Index.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+<p>Wollen Sie die betsten Werkzeugen?</p>
+<p>Kaufen Sie heute bei uns und bekommen Sie morgen Ihr Pordukt</p>
