--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/Navigation.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/Navigation.cshtml
@@ -1,8 +1,8 @@
-﻿    <div class="navbar">
-    <li><a asp-controller="home" asp-action="index">Startseite</a></li>
-    <li><a asp-controller="home" asp-action="aboutUs">Über uns</a></li>
-    <li><a asp-controller="home" asp-action="impressum">Impressum</a></li>
-    <li><a asp-controller="shop" asp-action="index">Shop</a></li>
+﻿<div class="navbar">
+    <a asp-controller="home" asp-action="index">Startseite</a>
+    <a asp-controller="home" asp-action="aboutUs">Über uns</a>
+    <a asp-controller="home" asp-action="impressum">Impressum</a>
+    <a asp-controller="shop" asp-action="index">Shop</a>
     <div class="dropdown">
         <button class="dropbtn">
             Benutzer
@@ -18,6 +18,6 @@
         <input type="text" placeholder="Suche" name="search2">
         <button type="submit"><i class="fa fa-search"></i></button>
     </form>
-
+ß
 </div>
 
