--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/_Layout.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/Shared/_Layout.cshtml
@@ -11,9 +11,8 @@
 <body>
     <div id="container">
         <header>
-            <div class="Baumarkt">
-                <p> Baumarkt GmBH</p>
-            </div>
+                <section class="logo"></section>
+            
         </header>
         <main>
             <partial name="Navigation" />
