--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/User/Register.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/User/Register.cshtml
@@ -43,7 +43,7 @@
                 <tr>
                     <td>Passwort:</td>
                     <td>
-                        <input name="Passwort" size="45" type="password" ß required />
+                        <input name="Passwort" size="45" type="password" required />
                     </td>
                 </tr>
                 <tr>
