--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/User/Login.cshtml
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/Views/User/Login.cshtml
@@ -3,37 +3,28 @@
     ViewData["Title"] = "Login";
 }
 
-<html lang="en">
-<body>
+<form name="Eingabe">
+    <table border="0" cellspacing="0" cellpadding="2">
+        <tbody>
+            <h5 class="card-title text-center">Login</h5>
+            
+            <tr>
+                <td>Email:</td>
+                <td>
+                    <input name="Email" size="45" type="text" name="Email" required />
+                </td>
+            </tr>
+            <tr>
+                <td>Passwort:</td>
+                <td>
+                    <input name="Passwort" size="45" type="password" required />
+                </td>
+            </tr>
+        <td>
+            <input type="submit" asp-controller="user" asp-action="index" value="Anmelden" />
+        </td>
+        </tr >
+        </tbody >
+    </table>
 
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-xl-9 mx-auto">
-                <div class="card card-signin flex-row my-5">
-                    <div class="card-img-left d-none d-md-flex">
-
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Login</h5>
-
-                        <form class="form-signin">
-                            <div class="form-label-group">
-                                <input type="email" placeholder="EMail" value="" autocomplete="on" required>
-                            </div>
-                            <div class="form-label-group">
-                                <input type="password" placeholder="Passwort" value="" autocomplete="off" required>
-                            </div>
-
-                            <div class="container">
-                                <button type="submit" value=""><a asp-controller="user" asp-action="index">Anmelden</a></button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-
-
+</form>
