--- a/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/wwwroot/css/site.css
+++ b/Webprojekt_1_Bauhandel/Webprojekt_1_Bauhandel/wwwroot/css/site.css
@@ -1,4 +1,10 @@
-﻿body {
+﻿.logo {
+    background: url('../image/Logo_klein.jpg') left no-repeat;
+    width: 100%;
+    height: 10vh;
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -33,7 +39,7 @@
     }
 
     .navbar a:hover, .dropdown:hover .dropbtn {
-        background-color: red;
+        background-color: lime;
     }
 
 .dropdown-content {
@@ -55,7 +61,7 @@
     }
 
         .dropdown-content a:hover {
-            background-color: blue;
+            background-color: lime;
         }
 
 .dropdown:hover .dropdown-content {
